--- a/.gitignore
+++ b/.gitignore
@@ -605,7 +605,7 @@ FodyWeavers.xsd
 # Windows Installer files from build outputs
 
 # JetBrains Rider
-
+.idea
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 
